# monopy

./: pyproject.toml
projects/core/btb/: CMakeLists.txt  pyproject.toml
projects/core/btb/src/: main.cpp
projects/tools/recording_parser/: pyproject.toml
projects/tools/recording_parser/src/acme/division/recording_parser/: __init__.py
