[project]
name = "recording-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kai Szuttor", email = "kai@szuttor.de" }
]
requires-python = ">=3.12"
dependencies = [
    "btb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acme"]

[tool.uv.sources]
btb = { workspace = true}
